--- a/WebServer/Views/Account/Index.cshtml
+++ b/WebServer/Views/Account/Index.cshtml
@@ -2,10 +2,82 @@
 @{
     ViewBag.Title = "Index";
 }
-<script >
-    
-</script>
-<input type="button" id="jsonID" name="testPostJson" value="postJson" /><br />
+<head>
+    <title></title>
+    <script>
+    function postCreateUser() {
+        $.ajax({
+            type: "POST",
+            url: "/User/CreateUser",
+            contentType: "application/json",
+            dataType: "json",
+            data: JSON.stringify({
+                "userName": "谢庆雄",
+                "userDepartment": "华工C16",
+                "userJob": "测试员",
+                "userDescription": "测试android",
+                "roleID": 3
+            }),
+            success: function (jsonResult) {
+                alert(JSON.stringify(jsonResult));
+            }
+        });
+    };
+
+    function postUpdateUser() {
+        $.ajax({
+            type: "POST",
+            url: "/User/UpdateUser",
+            contentType: "application/json",
+            dataType: "json",
+            data: JSON.stringify({
+                "userID":24,
+                "userName": "谢庆雄",
+                "userDepartment": "华工C16",
+                "userJob": "测试员",
+                "userDescription": "测试android",
+                "roleID": 2
+            }),
+            success: function (jsonResult) {
+                alert(JSON.stringify(jsonResult));
+            }
+        });
+    };
+
+    function postDeleteUsers() {
+        $.ajax({
+            type: "POST",
+            url: "/User/DeleteUsers",
+            contentType: "application/json",
+            dataType: "json",
+            data: JSON.stringify(
+                [
+                  24,25,26,27
+                ]
+                ),
+            success: function (jsonResult) {
+                alert(JSON.stringify(jsonResult));
+            }
+        });
+    };
+
+    function getUsers() {
+        $.ajax({
+            type: "POST",
+            url: "/User/GetUsers",
+            contentType: "application/json",
+            dataType: "json",
+            success: function (jsonResult) {
+                alert(JSON.stringify(jsonResult));
+            }
+        });
+    };
+    </script>
+</head>
+<input type="button" id="jsonID" name="testPostJson" value="postCreateUser" onclick="postCreateUser()"/><br />
+<input type="button" id="jsonID" name="testPostJson" value="postDeleteUsers" onclick="postDeleteUsers()" /><br />
+<input type="button" id="jsonID" name="testPostJson" value="postUpdateUser" onclick="postUpdateUser()" /><br />
+<input type="button" id="jsonID" name="testPostJson" value="getUsers" onclick="getUsers()" /><br />
 <fieldset>
     <legend>
         登录界面
