--- a/WebServer/Views/Account/Admin.cshtml
+++ b/WebServer/Views/Account/Admin.cshtml
@@ -5,7 +5,7 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/less/index.less" type="text/less" rel="stylesheet">
+    <link href="/less/index.less" type="text/less" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -13,8 +13,8 @@
     <div class="navbar navbar-fixed-top" id="mainMenu">
         <div class="container">
             <div class="navbar-header col-md-2">
-                <a class="navbar-brand col-md-12" href="#">
-                    <img alt="Brand" src="./images/u46.png">
+                <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="/images/u46.png">
                 </a>
             </div>
             <p class="navbar-text col-md-6">中佰会议系统管理员界面</p>
@@ -37,10 +37,10 @@
             </div>
             <ul class="nav nav-stacked panel-body" role="tablist">
                 <li role="presentation" class="active"><a href="#">首页</a></li>
-                <li role="presentation"><a href="#">会场管理</a></li>
-                <li role="presentation"><a href="#">人员与角色选择</a></li>
-                <li role="presentation"><a href="#">角色管理</a></li>
-                <li role="presentation"><a href="#">设备管理</a></li>
+                <li role="presentation"><a href="/MeetingPlace/Index_admin">会场管理</a></li>
+                <li role="presentation"><a href="/User/Index_admin">人员与角色选择</a></li>
+                <li role="presentation"><a href="/Role/Index_admin">角色管理</a></li>
+                <li role="presentation"><a href="/Device/Index_admin">设备管理</a></li>
             </ul>
         </div>
         <div class="panel col-md-9 col-md-offset-1" id="mainContentRight">
@@ -48,7 +48,7 @@
                 <div class="panel panel-default col-md-5">
                     会场：
                     <div class="buttonGropSingle">
-                        <button type="button" class="btn btn-button btn-lg">
+                        <button type="button" class="btn btn-button btn-default btn-lg">
                             会场总计:
                         </button>
                     </div>
@@ -56,7 +56,7 @@
                 <div class="panel panel-default col-md-5 col-md-offset-2">
                     设备：
                     <div class="buttonGropSingle">
-                        <button type="button" class="btn btn-button btn-lg">
+                        <button type="button" class="btn btn-button btn-default btn-lg">
                             设备总计:
                         </button>
                     </div>
@@ -66,10 +66,10 @@
                 <div class="panel panel-default col-md-5">
                     人员：
                     <div class="buttonGropDouble">
-                        <button type="button" class="btn btn-button btn-lg">
+                        <button type="button" class="btn btn-button btn-default btn-lg">
                             系统所有人员总计:
                         </button>
-                        <button type="button" class="btn btn-button btn-lg">
+                        <button type="button" class="btn btn-button btn-default btn-lg">
                             上次登录新增人员:
                         </button>
                     </div>
@@ -77,10 +77,10 @@
                 <div class="panel panel-default col-md-5 col-md-offset-2">
                     角色：
                     <div class="buttonGropDouble">
-                        <button type="button" class="btn btn-button btn-lg">
+                        <button type="button" class="btn btn-button btn-default btn-lg">
                             会议组织者总计:
                         </button>
-                        <button type="button" class="btn btn-button btn-lg">
+                        <button type="button" class="btn btn-button btn-default btn-lg">
                             参会人员总计:
                         </button>
                     </div>
@@ -88,11 +88,11 @@
             </div>
         </div>
     </div>
-    <script src="/node_modules/less/dist/less.js"></script>
     <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="/node_modules/less/dist/less.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/node_modules/angular/angular.js"> </script>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
