--- a/WebServer/Views/MeetingPlace/Index_admin.cshtml
+++ b/WebServer/Views/MeetingPlace/Index_admin.cshtml
@@ -5,7 +5,7 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/less/people_role.less" type="text/less" rel="stylesheet/less">
+    <link href="/less/meetingplace.less" type="text/less" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -14,12 +14,12 @@
         <div class="container">
             <div class="navbar-header col-md-2">
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="./images/u46.png">
+                    <img alt="Brand" src="/images/u46.png">
                 </a>
             </div>
             <p class="navbar-text col-md-6">中佰会议系统管理员界面</p>
             <ul class="col-md-3" id="signUpWindow">
-                <ol class="col-md-3"><b>管理员</b>&nbsp<b>张三</b></ol>
+                <ol class="col-md-5"><b>管理员</b>&nbsp<b>张三</b></ol>
                 <ol class="col-md-1">
                     <button type="button" class="btn btn-xs">
                         <!--超小按钮-->
@@ -36,21 +36,21 @@
                 <p class="panel-title">管理导航</p>
             </div>
             <ul class="nav nav-stacked panel-body" role="tablist">
-                <li role="presentation" class="active"><a href="#">首页</a></li>
+                <li role="presentation" class="active"><a href="/Account/Admin">首页</a></li>
                 <li role="presentation"><a href="#">会场管理</a></li>
-                <li role="presentation"><a href="#">人员与角色选择</a></li>
-                <li role="presentation"><a href="#">角色管理</a></li>
-                <li role="presentation"><a href="#">设备管理</a></li>
+                <li role="presentation"><a href="/User/Index_admin">人员与角色选择</a></li>
+                <li role="presentation"><a href="/Role/Index_admin">角色管理</a></li>
+                <li role="presentation"><a href="/Device/Index_admin">设备管理</a></li>
             </ul>
         </div>
         <div class="panel panel-default col-md-9 col-md-offset-1" id="mainContentRight">
             <div id="ContentRightHead" class="col-md-12">
-                <p id="ContentRightHeadTitle" class="col-md-4"><strong>人员与角色选择</strong></p>
+                <p id="ContentRightHeadTitle" class="col-md-3"><strong>会场管理</strong></p>
                 <ol class="breadcrumb col-md-3">
-                    <li><a href="#">首页</a></li>
-                    <li class="active">人员与角色选择</li>
+                    <li><a href="/Account/Admin">首页</a></li>
+                    <li class="active">会场管理</li>
                 </ol>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="input-group">
                         <input type="text" class="form-control">
                         <span class="input-group-btn">
@@ -58,32 +58,23 @@
                         </span>
                     </div>
                 </div>
-                <button class="btn btn-default col-md-2" type="button">返回主页</button>
+                <button class="btn btn-default col-md-2 returnIndex" type="button">返回主页</button>
                 <span id="ContentRightHeadState">
                     状态:<span>创建成功</span>
                 </span>
             </div>
             <div class="ContentRightButtonGroup">
-                <button class="btn btn-default new" type="button">新增人员</button>
-                <button class="btn btn-default delete" type="button">批量删除</button>
-                <button class="btn btn-default deleteRedo" type="button">撤销删除</button>
+                <button class="btn btn-default new" type="button">新增会场</button>
             </div>
             <div id="ContentRightList">
                 <div id="contentRightListGroup">
                     <ul class="list-group contentRightListGroupBanderList">
                         <li href="#" class="list-group-item disabled container-fluid">
-                            <input type="checkbox" value="" class="col-md-1 contentRightListGroupBanderListInput">
-                            <label class="col-md-2 list-If">
-                                人员名字
+                            <label class="col-md-4 list-If">
+                                会场名称
                             </label>
-                            <label class="col-md-2 list-If">
-                                人员部门
-                            </label>
-                            <label class="col-md-2 list-If">
-                                人员职位
-                            </label>
-                            <label class="col-md-2 list-If">
-                                人员角色
+                            <label class="col-md-4 list-If">
+                                会场可容纳人数
                             </label>
                         </li>
                     </ul>
@@ -103,9 +94,8 @@
                     </ul>
                 </nav>
             </div>
-            <div id="buttonGroup" class="col-md-4 col-md-offset-8">
-                <button class="btn btn-default col-md-5" type="button">返回主页</button>
-                <button class="btn btn-default col-md-5 col-md-offset-1" type="button">保存</button>
+            <div id="buttonGroup" class="col-md-2 col-md-offset-10">
+                <button class="btn btn-default returnIndex" type="button">返回主页</button>
             </div>
         </div>
     </div>
@@ -114,7 +104,7 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/node_modules/angular/angular.js">
     </script>
-    <script src="js/people_role.js"></script>
+    <script src="/js/meetingplace.js"></script>
 </body>
 
 </html>
