--- a/WebServer/less/meetingplace.less
+++ b/WebServer/less/meetingplace.less
@@ -56,12 +56,13 @@ html{
             .list-group{
                 text-align: center;
                 margin-bottom: 0;
-                .close{
+                /*.close{
                     background-image: url(../images/u637.png);
                     background-repeat: no-repeat;
                     background-position: center;
                     height: 30px;
                 }
+                */
             }
           }
        }
