--- a/WebServer/less/editPeopleAndRole.less
+++ b/WebServer/less/editPeopleAndRole.less
@@ -30,7 +30,7 @@ html{
      #mainContentRight{
         width: 850px;
         height:500px;
-        #inputaddemployee{
+        #inputEditPeople{
             padding-top: 100px;
             padding-left: 200px;
             text-align:left;
@@ -41,10 +41,10 @@ html{
         #input2{
             margin-left: 22px;
         }
-        
-        .btn-group{
+        #select{
             margin-left: 45px;
-           
+            width:120px;
+            height:30px;
         }
         button{
              padding:5px 25px 5px 25px;
@@ -55,7 +55,7 @@ html{
             margin-left: 120px;
             margin-top: 5px;
         }
-        #cancel2keep{
+        #cancel2Keep{
              margin-top: 10%;
          }
     }
