--- a/WebServer/Views/Device/Edit_admin.cshtml
+++ b/WebServer/Views/Device/Edit_admin.cshtml
@@ -5,7 +5,7 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/less/editPeopleAndRole.less" type="text/less" rel="stylesheet">
+    <link href="/less/editDevice.less" type="text/less" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -13,7 +13,7 @@
     <div class="navbar navbar-fixed-top" id="mainMenu">
         <div class="container">
             <div class="navbar-header col-md-2">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/Account/Admin">
                     <img alt="Brand" src="/images/u46.png">
                 </a>
             </div>
@@ -46,55 +46,38 @@
         <div class="panel panel-default col-md-9 col-md-offset-1" id="mainContentRight">
             <div>
                 <div class="col-md-3 ">
-                    <h1><strong>编辑人员</strong></h1>
+                    <h1><strong>编辑设备</strong></h1>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <br />
                     <ol class="breadcrumb">
                         <li><a href="/Account/Admin">首页</a></li>
-                        <li><a href="/User/Index_admin">人员与角色选择</a></li>
-                        <li class="active">编辑人员与角色</li>
+                        <li><a href="/MeetingPlace/Index_admin">会场管理</a></li>
+                        <li><a href="/Device/Index_admin">设备管理</a></li>
+                        <li class="active">编辑设备</li>
                     </ol>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-2 ">
                     <br />
-                    <button class="btn btn-default" type="button" id="cancel" href="#">取消编辑</button>
+                    <button class="btn btn-default" type="button" id="cancel1" href="#">取  消</button>
                 </div>
             </div>
-
-            <div id="inputEditPeople">
-                <p id="editPeople1"><strong>人员姓名：</strong><input id="input1" type="text" name="editPeople"></p>
-                <p id="editPeople2"><strong>人员部门单位：</strong><input id="input2" type="text" name="editPeople"></p>
-                <p id="editPeople3"><strong>人员职务：</strong><input id="input3" type="text" name="editPeople"></p>
-                <div>
-                    <strong>人员角色：</strong>
-                    <select name="select" id="select" class="xla_k">
-                        <option value="会议组织者" id="select1">会议组织者</option>
-                        <option value="普通用户" id="select2">普通用户</option>
-                        <option value="其他" id="select3">其他</option>
-                    </select>
-                </div>
-
-
-                <div><strong>人员详细描述：</strong></div><textarea id="description"></textarea>
-
-            </div>
-
+            <p id="deviceNum"><strong>设备编号：</strong><input id="input1" type="text" name="editDevice"></p>
+            <p id="device"><strong>设备IMEI：</strong><input id="input2" type="text" name="editDevice"></p>
 
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4 col-md-offset-4" id="cancel2Keep">
-                    <button class="btn btn-default" type="button" id="cancel2" href="#">取消编辑</button>&nbsp;&nbsp;
-                    <button class="btn btn-default" type="button" id="keep" href="#">保存编辑</button>
+                    <button class="btn btn-default" type="button" id="cancel2" href="#">取  消</button>&nbsp;&nbsp;
+                    <button class="btn btn-default" type="button" id="keep" href="/Device/UpdateDevice">保  存</button>
                 </div>
             </div>
-
         </div>
         <script src="/node_modules/less/dist/less.js"></script>
         <script src="/node_modules/jquery/dist/jquery.js"></script>
         <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
         <script src="/node_modules/angular/angular.js"> </script>
-        <script src="~/js/editPeopleAndRole.js"></script>
+        <script src="/js/editDevice.js"></script>
 </body>
 
 </html>
