--- a/WebServer/Views/Device/Index_admin.cshtml
+++ b/WebServer/Views/Device/Index_admin.cshtml
@@ -5,7 +5,7 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/less/meetingPlace/index.less" type="text/less" rel="stylesheet">
+    <link href="~/less/device/index.less" type="text/less" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -45,10 +45,10 @@
         </div>
         <div class="panel panel-default col-md-9 col-md-offset-1" id="mainContentRight">
             <div id="ContentRightHead" class="col-md-12">
-                <p id="ContentRightHeadTitle" class="col-md-3"><strong>会场管理</strong></p>
+                <p id="ContentRightHeadTitle" class="col-md-3"><strong>设备管理</strong></p>
                 <ol class="breadcrumb col-md-3">
                     <li><a href="/Account/Admin">首页</a></li>
-                    <li class="active">会场管理</li>
+                    <li class="active">设备管理</li>
                 </ol>
                 <div class="col-md-4">
                     <div class="input-group">
@@ -64,17 +64,17 @@
                 </span>
             </div>
             <div class="ContentRightButtonGroup">
-                <button class="btn btn-default new" type="button">新增会场</button>
+                <button class="btn btn-default new" type="button">新增设备</button>
             </div>
             <div id="ContentRightList">
                 <div id="contentRightListGroup">
                     <ul class="list-group contentRightListGroupBanderList">
                         <li href="#" class="list-group-item disabled container-fluid">
                             <label class="col-md-4 list-If">
-                                会场名称
+                                设备IMEI
                             </label>
                             <label class="col-md-4 list-If">
-                                会场可容纳人数
+                                设备编号
                             </label>
                         </li>
                     </ul>
@@ -85,12 +85,12 @@
                 <nav class="text-center" id="paginationOutWindow">
                     <ul class="pagination">
                         <!--<li><a href="#">&laquo;</a></li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">&raquo;</a></li>-->
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li><a href="#">&raquo;</a></li>-->
                     </ul>
                 </nav>
             </div>
@@ -104,7 +104,7 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/node_modules/angular/angular.js">
     </script>
-    <script src="~/js/meetingPlace/index.js"></script>
+    <script src="~/js/Device/index.js"></script>
 </body>
 
 </html>
