--- a/WebServer/Views/User/Edit_admin.cshtml
+++ b/WebServer/Views/User/Edit_admin.cshtml
@@ -5,7 +5,7 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/less/editPeopleAndRole.less" type="text/less" rel="stylesheet">
+    <link href="~/less/user/edit.less" type="text/less" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-md-3">
                     <br />
-                    <button class="btn btn-default" type="button" id="cancel" href="#">取消编辑</button>
+                    <button class="btn btn-default" type="button" id="cancel" href="/User/Index_admin">取消编辑</button>
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4 col-md-offset-4" id="cancel2Keep">
-                    <button class="btn btn-default" type="button" id="cancel2" href="#">取消编辑</button>&nbsp;&nbsp;
+                    <button class="btn btn-default" type="button" id="cancel2" href="/User/Index_admin">取消编辑</button>&nbsp;&nbsp;
                     <button class="btn btn-default" type="button" id="keep" href="#">保存编辑</button>
                 </div>
             </div>
@@ -94,7 +94,7 @@
         <script src="/node_modules/jquery/dist/jquery.js"></script>
         <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
         <script src="/node_modules/angular/angular.js"> </script>
-        <script src="~/js/editPeopleAndRole.js"></script>
+        <script src="~/js/user/edit.js"></script>
 </body>
 
 </html>
