--- a/WebServer/Views/User/Index_admin.cshtml
+++ b/WebServer/Views/User/Index_admin.cshtml
@@ -5,8 +5,8 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="~/less/peopleAndrole.less" type="text/less" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/node_modules/bootstrap/dist/css/bootstrap.css">
+    <link href="~/less/user/index.less" type="text/less" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
 <body>
@@ -110,7 +110,7 @@
     <script src="~/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/node_modules/angular/angular.js">
     </script>
-    <script src="/js/peopleAndrole.js"></script>
+    <script src="~/js/user/index.js"></script>
 </body>
 
 </html>
