--- a/WebServer/Views/Device/Edit_admin.cshtml
+++ b/WebServer/Views/Device/Edit_admin.cshtml
@@ -5,7 +5,7 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/less/editDevice.less" type="text/less" rel="stylesheet">
+    <link href="~/less/device/edit.less" type="text/less" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -69,7 +69,7 @@
                 <div class="col-md-4"></div>
                 <div class="col-md-4 col-md-offset-4" id="cancel2Keep">
                     <button class="btn btn-default" type="button" id="cancel2" href="#">取  消</button>&nbsp;&nbsp;
-                    <button class="btn btn-default" type="button" id="keep" href="/Device/UpdateDevice">保  存</button>
+                    <button class="btn btn-default" type="button" id="keep" href="#">保  存</button>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
         <script src="/node_modules/jquery/dist/jquery.js"></script>
         <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
         <script src="/node_modules/angular/angular.js"> </script>
-        <script src="/js/editDevice.js"></script>
+        <script src="~/js/device/edit.js"></script>
 </body>
 
 </html>
