--- a/WebServer/less/device/index.less
+++ b/WebServer/less/device/index.less
@@ -34,10 +34,10 @@
            #ContentRightHeadTitle{
                font-size: 179%;
            }
-           #ContentRightHeadState{
+            #ContentRightHeadState{
                top: 60%;
                position: absolute;
-               right:0;
+               right:80px;
                /*这里不指定宽度不然会换行*/
            }
        }
