--- a/WebServer/less/user/index.less
+++ b/WebServer/less/user/index.less
@@ -37,7 +37,7 @@ html{
            #ContentRightHeadState{
                top: 60%;
                position: absolute;
-               right:0;
+               right:80px;
                /*这里不指定宽度不然会换行*/
            }
        }
