--- a/WebServer/Views/Device/Add_admin.cshtml
+++ b/WebServer/Views/Device/Add_admin.cshtml
@@ -38,7 +38,7 @@
             <ul class="nav nav-stacked panel-body" role="tablist">
                 <li role="presentation" class="active"><a href="/Account/Admin">首页</a></li>
                 <li role="presentation"><a href="/MeetingPlace/Index_admin">会场管理</a></li>
-                <li role="presentation"><a href="/User/Index_admin">人员与角色选择</a></li>
+                <li role="presentation"><a href="/User/Index_admin">人员管理</a></li>
                 <li role="presentation"><a href="/Role/Index_admin">角色管理</a></li>
                 <li role="presentation"><a href="/Device/Index_admin">设备管理</a></li>
             </ul>
@@ -62,6 +62,9 @@
                     <br />
                     <button class="btn btn-default" type="button" id="cancel1" href="/Device/Index_admin">取 消</button>
                 </div>
+                <span id="ContentRightHeadState">
+                    状态:<span id="Status"></span>
+                </span>
             </div>
             <p id="deviceNum">
                 <strong>设备编号：</strong>
