--- a/WebServer/Views/Device/Edit_admin.cshtml
+++ b/WebServer/Views/Device/Edit_admin.cshtml
@@ -38,7 +38,7 @@
             <ul class="nav nav-stacked panel-body" role="tablist">
                 <li role="presentation" class="active"><a href="/Account/Admin">首页</a></li>
                 <li role="presentation"><a href="/MeetingPlace/Index_admin">会场管理</a></li>
-                <li role="presentation"><a href="/User/Index_admin">人员与角色选择</a></li>
+                <li role="presentation"><a href="/User/Index_admin">人员管理</a></li>
                 <li role="presentation"><a href="/Role/Index_admin">角色管理</a></li>
                 <li role="presentation"><a href="/Device/Index_admin">设备管理</a></li>
             </ul>
@@ -61,6 +61,9 @@
                     <br />
                     <button class="btn btn-default" type="button" id="cancel1" href="#">取  消</button>
                 </div>
+                <span id="ContentRightHeadState">
+                    状态:<span id="Status"></span>
+                </span>
             </div>
             <p id="deviceNum"><strong>设备编号：</strong><input id="input1" type="text" name="editDevice"></p>
             <p id="device"><strong>设备IMEI：</strong><input id="input2" type="text" name="editDevice"></p>
