--- a/WebServer/Views/Device/Index_admin.cshtml
+++ b/WebServer/Views/Device/Index_admin.cshtml
@@ -38,7 +38,7 @@
             <ul class="nav nav-stacked panel-body" role="tablist">
                 <li role="presentation" class="active"><a href="/Account/Admin">首页</a></li>
                 <li role="presentation"><a href="/MeetingPlace/Index_admin">会场管理</a></li>
-                <li role="presentation"><a href="/User/Index_admin">人员与角色选择</a></li>
+                <li role="presentation"><a href="/User/Index_admin">人员管理</a></li>
                 <li role="presentation"><a href="/Role/Index_admin">角色管理</a></li>
                 <li role="presentation"><a href="/Device/Index_admin">设备管理</a></li>
             </ul>
@@ -60,7 +60,7 @@
                 </div>
                 <button class="btn btn-default col-md-2 returnIndex" type="button">返回主页</button>
                 <span id="ContentRightHeadState">
-                    状态:<span>创建成功</span>
+                    状态:<span id="Status"></span>
                 </span>
             </div>
             <div class="ContentRightButtonGroup">
