--- a/WebServer/less/role/index.less
+++ b/WebServer/less/role/index.less
@@ -16,6 +16,26 @@ html{
         right: 0;
     }
 }
+.role_head{
+
+    width:100px;
+    height:66px;
+    border-style:solid;
+    border-color:black;
+    border-width:2px;
+    margin-top:2px;
+    padding:0px 10px 0px 10px;
+}
+.permission_head{
+    float:left;
+    width:100px;
+    height:66px;
+    border-style:solid;
+    border-color:black;
+    border-width:2px;
+    margin-top:2px;
+    padding:0px 10px 0px 10px;
+}
 
 #mainContent{
     margin-top:10%;
@@ -42,46 +62,54 @@ html{
         #authority{
             padding-left: 150px;
         }
-        #scroll{
+        #permission_list_scroll{
             overflow-x: auto;
             overflow-y: auto; 
             height: 100px; 
             width:400px;
             padding-left: 80px;
-            text-align: left;
-            
+            text-align: left;            
         }
-//        #option6{
-//            padding-left: 85px;
-//        }
+
         #create{
             margin-left: 80%;
         }
-        #scrollTable{
+        #roleTable_scroll{
             overflow-x: scroll;
             overflow-y: auto;
             width:650px;
-//            height:300px; 
-//            margin-left: 100px;
         }
         button{
             padding:5px 25px 5px 25px;
         }
         
-        #column1{
+        #roleTable{
+            border:10px;
+            border-color:blue;
             font-size: 70%;
             text-align: center;
             height:250px;
         }
-        #column2{
+        #permissionTable{
+           
+            border:10px;
+            border-color:blue;
             font-size: 70%;
             text-align: center;
-            width:1500px;
+            width:2630px;
             height:250px;
         }
         th{
             background-color:rgb(248,248,248);
             text-align: center;
+            height:50px;
+            width:100px;
+        }
+        tr{
+            background-color:rgb(248,248,248);
+            text-align: center;
+            height:50px;
+            width:30px;
         }
         #keep{
             margin-top: 20px;
@@ -94,3 +122,53 @@ html{
     box-shadow: 0 0 10px #06c;
 }
 
+.table-role-list{
+    width:100px;
+    height:80px;
+    text-align:left;
+}
+
+.role_name_list{
+    border-style:solid;
+    border-width:2px;
+    border-color:black;
+    width:100px;
+    height:30px;
+}
+.role_permission_list{
+    float:left;
+    text-align:center;
+    border-style:solid;
+    border-width:2px;
+    border-color:black;
+    width:100px;
+    height:30px;
+}
+
+.create_role_permission_list{
+     float:left;
+    text-align:left;
+    border-style:solid;
+    border-width:2px;
+    border-color:black;
+    width:200px;
+    height:30px;
+}
+
+.createRole-permission-scroll{
+    overflow-x: auto;
+    overflow-y: auto; 
+    height: 100px;       
+    width:400px;
+    padding-left: 80px;
+    text-align: left;
+}
+
+/*.all_role_row{
+    overflow-x: auto;
+    overflow-y: auto; 
+    height: 270px;       
+    width:800px;
+    padding-left: 20px;
+    text-align: left;
+}*/
