--- a/WebServer/less/role/index.less
+++ b/WebServer/less/role/index.less
@@ -20,21 +20,22 @@ html{
 
     width:100px;
     height:66px;
-    border-style:solid;
     border-color:black;
     border-width:2px;
     margin-top:2px;
     padding:0px 10px 0px 10px;
+    font-size:large;
+    font-weight:bolder;
 }
 .permission_head{
     float:left;
     width:100px;
     height:66px;
-    border-style:solid;
     border-color:black;
-    border-width:2px;
     margin-top:2px;
     padding:0px 10px 0px 10px;
+    font-size:large;
+    font-weight:bolder;
 }
 
 #mainContent{
@@ -91,13 +92,13 @@ html{
             height:250px;
         }
         #permissionTable{
-           
-            border:10px;
+            border-top:10px;
+            border-bottom:5px;
+            border-left:5px;
+            border-right:5px;
             border-color:blue;
-            font-size: 70%;
             text-align: center;
-            width:2630px;
-            height:250px;
+            width:4700px;
         }
         th{
             background-color:rgb(248,248,248);
@@ -126,33 +127,41 @@ html{
     width:100px;
     height:80px;
     text-align:left;
+    border-style:solid;
+    border-width:1px;
+    font-weight:bolder;
 }
 
 .role_name_list{
     border-style:solid;
-    border-width:2px;
+    border-width:1px;
     border-color:black;
     width:100px;
     height:30px;
+    font-weight:bolder;
 }
 .role_permission_list{
     float:left;
     text-align:center;
     border-style:solid;
-    border-width:2px;
+    border-width:1px;
     border-color:black;
     width:100px;
     height:30px;
+    font-weight:bolder;
 }
 
 .create_role_permission_list{
-     float:left;
+    float:left;
     text-align:left;
     border-style:solid;
-    border-width:2px;
+    border-top:1px;
+    border-left:1px;
+    border-right:1px;
     border-color:black;
     width:200px;
     height:30px;
+    font-weight:bolder;
 }
 
 .createRole-permission-scroll{
