--- a/WebServer/Views/Account/Admin.cshtml
+++ b/WebServer/Views/Account/Admin.cshtml
@@ -5,7 +5,7 @@
     <title>中佰会议系统管理员</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/less/index.less" type="text/less" rel="stylesheet">
+    <link href="~/less/index.less" type="text/less" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
@@ -19,7 +19,7 @@
             </div>
             <p class="navbar-text col-md-6">中佰会议系统管理员界面</p>
             <ul class="col-md-3" id="signUpWindow">
-                <ol class="col-md-6"><b>管理员</b>&nbsp&nbsp<b>张三</b></ol>
+                <ol class="col-md-6"><b>管理员</b>&nbsp&nbsp<label for="name">张三</label></ol>
                 <ol class="col-md-4">
                     <button type="button" class="btn btn-xs">
                         <!--超小按钮-->
@@ -92,7 +92,6 @@
     <script src="/node_modules/less/dist/less.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/node_modules/angular/angular.js"> </script>
-    <script src="/js/index.js"></script>
 </body>
 
 </html>
