--- a/WebServer/Views/User/Add_admin.cshtml
+++ b/WebServer/Views/User/Add_admin.cshtml
@@ -66,12 +66,9 @@
             </div>
 
             <div id="importExcel">
-                <form action="/User/Upload" method="post" enctype="multipart/form-data">
+                <form action="/User/Import" method="post" enctype="multipart/form-data">
                     <label>
                         导入Excel文件<input type="file" name="file" title="导入Excel文件" />
-                    </label>
-                    <label>
-                        输入文件表格名称，默认为Sheet1<input type="text" name="tableName" />
                     </label>
                     <input type="submit" value="导入" />
                 </form>
