--- a/WebServer/Views/Meeting/Show_organizor.cshtml
+++ b/WebServer/Views/Meeting/Show_organizor.cshtml
@@ -37,6 +37,7 @@
                 状态:<span id="Status"></span>
             </div>
             </div>
+        <div><a href="/Report/Export?meetingID=@Session["meetingID"]" >打印报表</a></div>
     </div>
     
         
